--- a/vivian.html
+++ b/vivian.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animation.css">
-	<!-- <link rel="stylesheet" href="css/fade-in.css"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
 </head>
 <body class="">
 	<div id="skrollr-body">
