--- a/vivian.html
+++ b/vivian.html
@@ -5,12 +5,12 @@
 	<link rel="stylesheet" href="css/animation.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
 </head>
-<body class="">
+<body class="noscroll">
 	<div id="skrollr-body">
 
 		<section id="intro">
 			<div class="container-video">
-				<video id="video-vivian-intro" autoplay onended="startExperience()" controls muted>
+				<video id="video-vivian-intro" autoplay onended="startExperience()">
 					<source src="res/video-vivian-intro.mp4" type="video/mp4">
 				</video>
 				<div class="container-story-title">
@@ -146,7 +146,7 @@
 
 		<section id="outro">
 			<div class="container-video">
-				<video id="video-vivian-outro" controls muted>
+				<video id="video-vivian-outro">
 					<source src="res/video-vivian-outro.mp4" type="video/mp4">
 				</video>
 			</div>
