--- a/vivian.html
+++ b/vivian.html
@@ -11,7 +11,7 @@
 		<section id="intro">
 			<div class="container-video">
 				<video id="video-vivian-intro" autoplay onended="startExperience()">
-					<source src="res/video-vivian-intro.mp4" type="video/mp4">
+					<source src="res/vivian-intro-eng.mp4" type="video/mp4">
 				</video>
 				<div class="container-story-title">
 					<h4>01.</h4>
@@ -44,13 +44,18 @@
 			<!-- lunch section -->
 			<section class="row" id="lunch">
 				<div class="col-left">
-					<img src="img/vivian/a_lunch.png" class="lunch"
+					<img src="img/vivian/lunch-alone.jpg" class="lunch"
 						data-bottom-top="opacity: 0; left: -100px;"
 						data-center-top="opacity: 1; left: 0;"
+						data-top-bottom="opacity: 0;"
+						>
+					<img src="img/vivian/lunch-friend.jpg" class="lunch-friend"
+						data-center-center="opacity: 0;"
+						data-top-top="opacity: 1;"
 						>
 					<img src="img/vivian/a_paint1.png" class="paint"
 						data-bottom-top="opacity: 0; right: 360px;"
-						data-center-top="opacity: 1; right: 350px;">
+						data-center-top="opacity: 1; right: 250px;">
 					<h2 id="quote-worry"
 						data-bottom-top="opacity: 0; bottom: -30px;"
 						data-center-top="opacity: 1; bottom: -5px;"
@@ -102,7 +107,7 @@
 						data-bottom-top="opacity: 0; top: 350px;"
 						data-top-bottom="opacity: 1; top: 250px;">I dread class presentations the most.</h2>
 
-					<img src="img/vivian/a_bored.png" class="bored"
+					<img src="img/vivian/bored.jpg" class="bored"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
 					<p
@@ -118,7 +123,7 @@
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">A lot of the time I get confused on what homework we need to do or what the teacher just said, but I'm scared to ask my classmates because I don't want them to think I'm annoying if I can't understand them.</p>
 
-					<img src="img/vivian/a_homework.png" class="homework"
+					<img src="img/vivian/homework.gif" class="homework"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;"
 						>
@@ -167,7 +172,7 @@
 		<section id="outro">
 			<div class="container-video">
 				<video id="video-vivian-outro" onended="replayOutro()">
-					<source src="res/video-vivian-outro.mp4" type="video/mp4">
+					<source src="res/vivian-outro-eng.mp4" type="video/mp4">
 				</video>
 				<img src="img/video-replay.png" alt="replay video button" id="button-replay-outro" class="replay">
 			</div>
