--- a/vivian.html
+++ b/vivian.html
@@ -79,7 +79,7 @@
 					<p
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
-						I hoped to make lots of friends in ESL classes but it was harder because I’m shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
+						I hoped to make lots of friends in ESL classes but it was harder because I'm shy. A lot of them were here for a longer time and also spoke better English than me, which made me feel bad. I ate by myself at lunch for the first few months, but I have some friends now. We talk about anime and cosplay, which I love.</p>
 				</div>
 			</section>
 
@@ -138,7 +138,7 @@
 						data-bottom-top="opacity: 0; right: 60px;"
 						data-center-top="opacity: 1; right: 80px;"
 						data-top-bottom="opacity: 1; right: 100px;"
-						>I feel like I’m annoying my classmates when I keep asking for help.</h2>
+						>I feel like I'm annoying my classmates when I keep asking for help.</h2>
 					<audio id="audio-vivian-annoying">
 						<source src="res/vivian-quote-annoying-eng.mp3" type="audio/mpeg">
 					</audio>
@@ -150,13 +150,13 @@
 				<div class="col-full">
 					<p
 						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I’m terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students. Why did the teacher make international students participate if she was only going to ask for Canadian students’ answers?</p>
+						data-center-top="opacity: 1;">Once, the teacher made us raise our hands and answer questions for a participation mark. I needed any marks because I was close to failing, and I finally found the courage to raise my hand even though I'm terrified of speaking out loud. She kept choosing Canadian students to answer, and ignored the international students. Why did the teacher make international students participate if she was only going to ask for Canadian students' answers?</p>
 					<img src="img/vivian/a_paint5.png" class="paint"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
 					<h2 id="quote-contribute"
 						data-bottom-top="opacity: 0; bottom: 0px;"
-						data-top-bottom="opacity: 1; bottom: 50px;">When I don’t contribute, it’s not because I don’t want to. It’s because I don’t know how to say my ideas.</h2>
+						data-top-bottom="opacity: 1; bottom: 50px;">When I don't contribute, it's not because I don't want to. It's because I don't know how to say my ideas.</h2>
 					<audio id="audio-vivian-contribute">
 						<source src="res/vivian-quote-contribute-eng.mp3" type="audio/mpeg">
 					</audio>
@@ -167,7 +167,7 @@
 				<div class="col-full">
 					<p
 						data-bottom-top="opacity: 0;"
-						data-center-top="opacity: 1;">I understand why my groupmates don’t give me a lot to do during projects. It’s difficult to learn new concepts taught in class and English at the same time. I have to translate every few words from the textbook into Chinese to help me understand, which takes hours. I’m sorry if I’m useless, but I promise I’m trying not to be.</p>
+						data-center-top="opacity: 1;">I understand why my groupmates don't give me a lot to do during projects. It's difficult to learn new concepts taught in class and English at the same time. I have to translate every few words from the textbook into Chinese to help me understand, which takes hours. I'm sorry if I'm useless, but I promise I'm trying not to be.</p>
 				</div>
 			</section>
 		</div> <!-- end story-container div -->
