--- a/vivian.html
+++ b/vivian.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animation.css">
+	<link rel="stylesheet" href="css/vivian.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
 </head>
 <body class="noscroll">
@@ -24,7 +25,7 @@
 					<source src="res/vivian-intro-eng.mp4" type="video/mp4">
 				</video>
 				<div class="container-story-title">
-					<h4>01.</h4>
+					<!-- <h4>01.</h4> -->
 					<h1>Vivian</h1>
 				</div>
 				<img src="img/video-replay.png" alt="replay video button" id="button-replay-intro" class="replay">
