--- a/andy.html
+++ b/andy.html
@@ -38,7 +38,7 @@
 			<!-- welcoming section -->
 			<section class="row" id="welcoming">
 				<div class="col-full">
-					<img src="img/vivian/a_paint5.png" class="paint"
+					<img src="img/andy/paint1.png" class="paint"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
 					<h2 id="quote-contribute"
@@ -57,7 +57,7 @@
 						data-bottom-top="opacity: 0; left: -100px;"
 						data-center-top="opacity: 1; left: 0;"
 						>
-					<img src="img/vivian/a_paint1.png" class="paint"
+					<img src="img/andy/paint2.png" class="paint"
 						data-bottom-top="opacity: 0; right: 400px;"
 						data-center-top="opacity: 1; right: 350px;">
 				</div>
@@ -72,7 +72,7 @@
 			<!-- divide section -->
 			<section class="row" id="divide">
 				<div class="col-full">
-					<img src="img/vivian/a_paint3.png" class="paint"
+					<img src="img/andy/paint3.png" class="paint"
 						data-bottom-top="opacity: 0;;"
 						data-center-top="opacity: 1;"
 						>
@@ -102,7 +102,7 @@
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;"
 						>
-					<img src="img/vivian/a_paint4.png" class="paint"
+					<img src="img/andy/paint4.png" class="paint"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;"
 						>
@@ -125,7 +125,7 @@
 					<p
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">With every school spirit event like Pajama Day, no one in my group really understood what school spirit was. We never had these events back home and no one told us why these events happened. That’s why we didn’t take part in these events. </p>
-					<img src="img/vivian/a_paint5.png" class="paint"
+					<img src="img/andy/paint5.png" class="paint"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;">
 					<h2 id="quote-contribute"
@@ -153,7 +153,7 @@
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;"
 						>
-					<img src="img/vivian/a_paint4.png" class="paint"
+					<img src="img/andy/paint6.png" class="paint"
 						data-bottom-top="opacity: 0;"
 						data-center-top="opacity: 1;"
 						>
